
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wdr-ddj-cloud"
version = "1.0.0"
description = "Deploy Python scrapers to AWS with the Serverless Framework."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    # Keep bounds somewhat conservative, depending on package. See
    # https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-specifiers
    # for more details on dependency specifiers.
    # Most packages should not cross major versions unless explicitly requested.
    "beautifulsoup4~=4.14",
    "lxml~=4.9",
    "dateparser~=1.3",
    "numpy~=1.26",
    "pandas~=1.5",
    "boto3~=1.42.57",
    "google-cloud-bigquery~=3.40",
    "google-api-python-client~=2.192",
    "sentry-sdk~=1.45",
    "certifi>=2026.2.25",
    "tzdata>=2025.3",
    "datawrapper~=0.6.1",
    "fastparquet==2023.10.1",
    "python-slugify~=8.0",
    "babel~=2.18",
    "pydantic~=2.9.2",
    "shapely~=2.1",
    "requests~=2.32",
]

[project.scripts]
manage = "manage:cli"

[dependency-groups]
dev = [
    "click~=8.1",
    "black",
    "copier~=9.4.0",
    "copier-templates-extensions~=0.3",
    "colorama",
]

[tool.hatch.build.targets.wheel]
packages = ["ddj_cloud"]
include = ["manage.py"]

[tool.ruff]
target-version = "py311"
src = ["ddj_cloud", "scraper_template"]
indent-width = 4
line-length = 100
exclude = []
select = [
    "ARG", # unused-arguments
    "B",   # bugbear
    "E",   # pycodestyle
    "EM",  # errmsg
    "F",   # flake8
    "I",   # import order
    "PYI", # pyi
    "SIM", # simplify
    # "T20",  # print
    "TC",   # type-checking
    "TID",  # tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle
    # "D",   # pydocstyle
    "PL", # Pylint
]
ignore = [
    "E501", # line too long
]


[tool.pyright]
pythonVersion = "3.11"
include = ["ddj_cloud", "scraper_template"]
extend-exclude = []
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "none"
# reportUnknownMemberType = "warning"
# reportUnknownVariableType = "warning"
# reportUnknownArgumentType = "warning"
# reportUnknownFunctionType = "warning"
